--- a/Gestionnaire_de_contacts/Gestionnaire_de_contacts/Gestionnaire_de_contacts.vcxproj
+++ b/Gestionnaire_de_contacts/Gestionnaire_de_contacts/Gestionnaire_de_contacts.vcxproj
@@ -148,6 +148,9 @@
     <ClCompile Include="..\..\outil.c" />
     <ClCompile Include="..\..\rep.c" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="rep.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
